2013-02-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Simplify SyncTeX change files.
	* synctex-def.ch0, synctex-xe-def.ch0: New files defining
	synctex_field_size (1 or 2) and field access macros.
	* synctex-mem.ch0: Drop synctex_field_size.
	* synctex-rec.ch0, synctex-e-rec.ch0: Use field access macros.
	* synctex-rec.ch1: Drop obsolete explicit field access.
	* synctex-mem.ch1, synctex-xe-rec.ch2, synctex-xe-mem.ch2,
	synctex-e-rec.ch1 (removed): Now obsolete.
	* am/synctex.am: Adapted.

2012-11-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* synctex-rec.ch0: Avoid conflict with xetexdir/xetex.web.

2012-10-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* synctex_parser_utils.h: Avoid definition of FALSE and TRUE
	that may cause warnings.	

2012-09-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* synctex_main.c: Define snprintf and getcwd for WIN32.

2012-07-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* synctex_main.c (TEST): Check values returned by snprintf().

2012-06-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* synctex.c: Remove "# warning ..." line, because MSVC fails to
	interpret it.
	From Akira Kakuto <kakuto@fuk.kindai.ac.jp> (W32TeX).

2012-05-16  Vladimir Volovich  <vvv@vsu.ru>

	* synctex_parser.c (SYNCTEX_DECLARE_CHARINDEX): Bug fix, avoid
	isolated semicolon.

2012-02-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* synctex_parser.c: Change struct __synctex_updater_t member
	file from 'void *' to 'gzFile', they differ for zlib-1.2.6.

2011-10-18  Akira Kakuto   <kakuto@fuk.kindai.ac.jp>

	* synctex_parser.c: remove "# warning ..." lines, because MSVC fails to
	interpret them.

2011-10-14  Jérôme Laurens  <jerome.laurens@u-bourgogne.fr>

    These changes only affect the synctex command line utility
    as well as 3rd parties developers. The various TeX engines are not affected.
    
	* synctex_parser.c:
        - cosmetic changes to enhance code readability
        - Adding the notiong of mean line and weight to hbox nodes